<resources>
    <string name="app_name">Here! Attendance</string>
    <string name="title_activity_login">Here!</string>
    <string name="title_activity_main">Attendance History</string>
    <string name="title_activity_qrscanner">QR Scanner</string>
    <string name="title_activity_maps">Map</string>

    <!-- Strings related to login -->
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <!-- Strings related to navigation menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Attendance</string>
    <string name="nav_header_student_name">John Appleseed</string>
    <string name="nav_header_desc">Navigation header</string>

    <!-- Menu title strings -->
    <string name="action_share">Share</string>
    <string name="send_to">Share using</string>

    <!-- TODO: delete these and the rest of QR fragment -->
    <string name="msgCSCI_QRGenerator">Please write CSCI Code</string>
    <string name="msgDate_QRGenerator">Please write Date of Lecture</string>

    <!-- These will be overwritten by the course that was selected -->
    <string name="title_activity_class_attendance">CSCI4176</string>
    <string name="title_activity_qrgenerator">CSCI4176</string>

    <string name="nav_attendancehistory">Attendance History</string>
    <string name="nav_qrscanner">QR Scanner</string>
    <string name="nav_map">Map</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_qrgenerator">QR Generator</string>

    <string name="content_description_overlay">overlay</string>
    <string name="content_description_qr_code">QR code</string>
    <string name="student_name">John Appleseed</string>

    <string name="overall_attendance_label">Overall Attendance</string>
    <string name="days_attended_label">Days Attended</string>

    <string name="attendance_percent_placeholder">-%</string>
    <string name="days_attended_placeholder">- of -</string>
    <string name="course_name_placeholder">Software Engineering</string>
    <string name="course_code_placeholder">CSCI3130</string>
    <string name="lecture_date_placeholder">September 3</string>
    <string name="lecture_num_placeholder">Lecture 1</string>
</resources>
