<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/g1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_attendancehistory"
            android:icon="@drawable/ic_round_access_time_24px"
            android:title="@string/nav_attendancehistory" />
        <item
            android:id="@+id/nav_qrscanner"
            android:icon="@drawable/ic_round_crop_free_24px"
            android:title="@string/nav_qrscanner" />
        <item
            android:id="@+id/nav_qrgenerator"
            android:icon="@drawable/ic_round_crop_free_24px"
            android:title="@string/nav_qrgenerator"
            android:visible="false" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/nav_map" />
    </group>
    <group android:id="@+id/g2">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_round_close_24px"
            android:title="@string/nav_logout" />
    </group>

</menu>
